2007-08-09  Thomas Heller  <theller@python.net>

	* Added the IRecordInfo interface to comtypes.typeinfo.

	* If UDTs (structures or unions) in a typelib have a GUID defined,
	add a _recordinfo_ attribute to the generated code.  This allows
	to call GetRecordInfoFromGuids(*_recordinfo_) to get an
	IRecordInfo pointer.

	* Released comtypes-0.3.2

2007-08-08  Thomas Heller  <theller@python.net>

	* Add better support for dynamic dispatch, comtypes.CoUninitialize
	function.  Patch from Belyaev Dmitry.

2007-03-23  Thomas Heller  <theller@python.net>

	* Fixed: TextWrap did destroy the generated code when very long
	symbol names used were in the type library.

	* The IEnumVARIANT.Next(celt) method can now be called with
	celt != 1.  It will return a list of items then; this allows to get
	more objects at a time.

2007-03-22  Thomas Heller  <theller@python.net>

	* In comtypes.hresult, add the hex HRESULT values in comments for
	reference.

	* In comtypes.errorinfo.ReportError, use the supplied hresult
	value.

	* Improved _NewEnum client-side handling.

	* When a relative pathname to a type library is passed to
	comtypes.client.GetModule(), the pathname is now interpreted
	relative to the __file__ of the caller if this pathname actually
	exists in the filesystem.

	* Fixed several memory leaks and other problems in the BSTR
	implementation.  The previous change that requires ctypes version
	1.0.2 was backed out again because it was the wrong approach.
	
2007-01-25  Thomas Heller  <theller@python.net>

	NOTE: This comment is no longer true, see above.
	* Removed unneeded methods from comtypes.BSTR.  The resource
	management is handled by ctypes; this requires ctypes version
	1.0.2 to correctly release BSTR resources.

2007-01-19  Thomas Heller  <theller@python.net>

	* The comtypes.test package is now self contained, it does no
	longer depend on ctypes.test which may not be available.

2007-01-16  Thomas Heller  <theller@python.net>
