@@ -1,3 +1,8 @@
+2007-08-10  Thomas Heller  <theller@python.net>
+
+	* Add comtypes.PumpWaitingMessages() helper funtion.  May be used
+	to dispatch COM events in single threaded appartments.
+
 2007-08-09  Thomas Heller  <theller@python.net>
 
 	* Added the IRecordInfo interface to comtypes.typeinfo.
